<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradation_primal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.LogInActivity">


    <EditText
        android:id="@+id/passwordField"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/emailField"
        android:layout_below="@+id/emailField"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:background="@drawable/bg_white_30"
        android:layout_marginTop="15dp"
        android:padding="15dp"
        android:textSize="14sp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:background="@drawable/bg_white"
        android:layout_marginTop="15dp"
        android:layout_alignLeft="@+id/passwordField"
        android:layout_below="@+id/passwordField"
        android:textColor="#757575"
        android:text="@string/login_button_label"
        android:layout_alignRight="@+id/passwordField"
        android:layout_alignEnd="@+id/passwordField"
        tools:text="ログイン" />


    <TextView
        android:id="@+id/signUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tw_loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        tools:text="＞はじめての方"
        android:text="@string/sign_up_text"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/textView"
        android:text="SNSアカウントでログイン"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:layout_below="@+id/loginButton"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/emailField"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_white_30"
        android:padding="15dp"
        android:textSize="14sp">

        <requestFocus/>
    </EditText>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/fb_loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/loginButton"
        android:layout_alignStart="@+id/loginButton"
        android:layout_alignRight="@+id/loginButton"
        android:layout_alignEnd="@+id/loginButton"
        android:textSize="14sp" />


    <com.twitter.sdk.android.core.identity.TwitterLoginButton
        android:id="@+id/tw_loginButton"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_below="@+id/fb_loginButton"
        android:layout_marginTop="10dp"
        android:layout_alignLeft="@+id/fb_loginButton"
        android:layout_alignStart="@+id/fb_loginButton"
        android:layout_alignRight="@+id/fb_loginButton"
        android:layout_alignEnd="@+id/fb_loginButton"/>

</RelativeLayout>